# kri0k

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CLAUDE.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  T9_COMPLETION.md  clippy.toml  pyproject.toml  rustfmt.toml
.claude/: CLAUDE.md  registry.md  tasks.md
.claude/skills/: bootstrap-prd.md  codex.md  portfolio.md  review-tutor.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-langgraph-structure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-VERIFICATION.md
.planning/phases/02-sense-node-ollama-provider/: 02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/phases/03-reason-plan-nodes/: 03-VERIFICATION.md
.planning/phases/04-act-node-ttp-whois/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-SECURITY.md  04-UAT.md  04-VALIDATION.md
config/: scope.example.yaml
crates/kri0k-core/: Cargo.toml
crates/kri0k-core/src/: audit.rs  lib.rs  safeguards.rs  scope.rs  ttp.rs
crates/kri0k-core/src/ttp/: mod.rs  subprocess.rs  whois.rs
crates/kri0k-core/tests/fixtures/: whois_example_com.txt
crates/kri0k-graph/: Cargo.toml
crates/kri0k-graph/src/: lib.rs
crates/kri0k-pybridge/: Cargo.toml
crates/kri0k-pybridge/src/: lib.rs
crates/kri0k-pybridge/tests/: engagement_missing_whois.rs
docs/: ARCHITECTURE.md
docs/adr/: ADR-0001-canonical-state-in-rust.md  ADR-0002-stable-graph-ulid-ids.md  ADR-0003-json-compact-wire-format.md  ADR-0004-tokio-localset-gil-release.md  ADR-0005-deterministic-rust-validator.md  ADR-0006-propose-only-default.md  ADR-0007-append-only-audit-log.md  ADR-0008-llm-local-first-ollama.md  ADR-0009-cargo-workspace-maturin.md  ADR-0010-licensing-ethical-clause.md  ADR-0011-scope-yaml-checksum.md  ADR-0012-ttp-trait-adapters.md  ADR-0013-ttp-trait-subprocess-abstraction.md  README.md
docs/security/: THREAT_MODEL.md
python/kri0k/: __init__.py  _native.pyi  engagement.py
python/kri0k/agent/: __init__.py  graph.py  state.py
python/kri0k/agent/nodes/: __init__.py  act.py  plan.py  reason.py  reflect.py  sense.py
python/kri0k/llm/: __init__.py  config.py  formatters.py  healthcheck.py  ollama.py  parser.py  protocol.py  rate_limit.py  templates.py
python/kri0k/llm/prompts/: act.jinja2  healthcheck.jinja2  plan.jinja2  reason.jinja2  reflect.jinja2  sense.jinja2
tests/: test_act_node.py  test_agent_graph.py  test_engagement_smoke.py  test_llm_config.py  test_llm_factory.py  test_llm_formatters.py  test_llm_healthcheck.py  test_llm_ollama.py  test_llm_parser.py  test_llm_rate_limit.py  test_llm_templates.py  test_plan_node.py  test_reason_node.py  test_sense_node.py  test_smoke.py
tests/fixtures/: whois_example_com.txt  whois_google_com.txt  whois_invalid.txt
