[workspace]
resolver = "2"
members = [
    "crates/kri0k-core",
    "crates/kri0k-graph", 
    "crates/kri0k-pybridge",
]

[workspace.package]
# MSRV: indexmap 2.14+ requires 1.83, petgraph pulls it in
rust-version = "1.83.0"
edition = "2021"
license = "MIT"  # TODO(KRK-LICENSE): Finalize with ethical clause per ADR-0010

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
petgraph = { version = "0.6", features = ["serde-1"] }
ulid = { version = "1.1", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups have lower priority so individual lints can override
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific overrides
module_name_repetitions = "allow"
similar_names = "allow"
too_many_arguments = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Security-critical denies
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
unimplemented = "deny"
todo = "warn"
cognitive_complexity = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
