# KRK-001 Kri0K — Python project configuration
# This file should be merged into the root pyproject.toml

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kri0k"
version = "0.1.0"
description = "AI-driven reconnaissance orchestrator with deterministic validation"
authors = [
    {name = "Lucas Santos", email = "LukeSantossz@users.noreply.github.com"},
]
readme = "README.md"
license = {text = "TBD"}  # See ADR-0010
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "ipaddress>=1.0.23",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.11",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.24",
    "maturin>=1.7",
    "pre-commit>=3.8",
]

ollama = ["ollama>=0.3.0"]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.54.0"]

all = [
    "kri0k[dev,ollama,anthropic,openai]",
]

[project.scripts]
kri0k = "kri0k.cli:main"

[project.urls]
Homepage = "https://github.com/LukeSantossz/kri0k"
Repository = "https://github.com/LukeSantossz/kri0k"
Issues = "https://github.com/LukeSantossz/kri0k/issues"

# Maturin configuration
[tool.maturin]
manifest-path = "crates/kri0k-pybridge/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "kri0k._native"
python-source = "python"

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "ANN",       # annotations
    "ASYNC",     # async
    "S",         # bandit (security)
    "B",         # bugbear
    "A",         # builtins
    "COM",       # commas
    "C4",        # comprehensions
    "DTZ",       # datetimez
    "T10",       # debugger
    "EXE",       # executable
    "ISC",       # implicit-str-concat
    "ICN",       # import-conventions
    "G",         # logging-format
    "PIE",       # pie
    "T20",       # print
    "PT",        # pytest-style
    "Q",         # quotes
    "RSE",       # raise
    "RET",       # return
    "SIM",       # simplify
    "TCH",       # type-checking
    "ARG",       # unused-arguments
    "PTH",       # use-pathlib
    "ERA",       # eradicate
    "PL",        # pylint
    "TRY",       # tryceratops
    "RUF",       # ruff-specific
]

ignore = [
    "ANN101",   # Missing type annotation for self
    "ANN102",   # Missing type annotation for cls
    "ANN401",   # Dynamically typed expressions (Any)
    "COM812",   # Trailing comma (conflicts with formatter)
    "ISC001",   # Implicit string concatenation (conflicts with formatter)
    "S603",     # subprocess-without-shell-equals-true (intentional for TTPs)
    "S607",     # start-process-with-partial-path (TTPs call external tools)
    "PLR0913",  # Too many arguments
    "TRY003",   # Long messages in exception
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # Allow assert in tests
    "ANN",      # No type annotations required in tests
    "PLR2004",  # Magic value comparison allowed in tests
    "S105",     # Hardcoded passwords in test fixtures OK
]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["kri0k"]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

# Platform-specific
platform = "linux"

# Import discovery
mypy_path = "python"
namespace_packages = true
explicit_package_bases = true

# Output
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Caching
cache_dir = ".mypy_cache"
incremental = true

[[tool.mypy.overrides]]
module = "kri0k._native"
ignore_missing_imports = true  # Native Rust module, stubs provided separately

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-v",
    "--tb=short",
    "--color=yes",
]

markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (cross-language, Rust ↔ Python)",
    "slow: Slow tests (network, external tools)",
    "ttp: TTP-specific tests (requires external tools: nmap, dig, whois)",
    "graph: Graph fixture tests (petgraph state validation)",
    "audit: Audit log validation tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["kri0k"]
omit = [
    "tests/*",
    "kri0k/_native.pyi",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
